# CLAP

./: CMakeLists.txt  README.md
src/: main.cpp  test_main.cpp
src/cfg/: cli_parser.cpp  cli_parser.h  config.cpp  config.h
src/lexer/: file_reader.cpp  file_reader.h  lexer.cpp  lexer.h  stat.cpp  stat.h  token.cpp  token.h  token_deprecated.cpp  token_deprecated.h
src/util/: all.h  constants.h  functional.h  log.h  overloaded.h  result.h  time.h  type.h
testbench/: corr1.c  corr2.c  corr3.c  corr4.c  huge_test_out.c  wrong1.c  wrong2.c
